force-app/main/default/objects/Asset_Issue__c/Asset_Issue__c.object-meta.xml
<CustomObject>
    <label>Asset Issue</label>
    <nameField>
        <label>Asset  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>