force-app/main/default/objects/Asset_Issue__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signage</fullName>
            </value>
            <value>
                <fullName>Water/Sewer</fullName>
            </value>
            <value>
                <fullName>Pavement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>