force-app/main/default/objects/Asset_Issue__c/fields/EAM_Tech_Notes__c.field-meta.xml
<CustomField>
    <fullName>EAM_Tech_Notes__c</fullName>
    <label>EAM Tech Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>