force-app/main/default/objects/Asset_Issue__c/fields/External_EAM_ID__c.field-meta.xml
<CustomField>
    <fullName>External_EAM_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External EAM ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>