force-app/main/default/objects/Asset_Issue__c/fields/Submitter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Phone__c</fullName>
    <label>Submitter Phone</label>
    <type>Phone</type>
</CustomField>