force-app/main/default/objects/Asset_Issue__c/listViews/Pavement_Streets_Queue_Asset.listView-meta.xml
<ListView>
    <fullName>Pavement_Streets_Queue_Asset</fullName>
    <filterScope>Queue</filterScope>
    <label>Pavement &amp; Streets Queue</label>
    <queue>Pavement_Streets_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>