force-app/main/default/objects/Asset_Issue__c/listViews/Signs_Maintenance_Queue_Asset.listView-meta.xml
<ListView>
    <fullName>Signs_Maintenance_Queue_Asset</fullName>
    <filterScope>Queue</filterScope>
    <label>Signs Maintenance Queue</label>
    <queue>Signs_Maintenance_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>