force-app/main/default/objects/Asset_Issue__c/listViews/Utility_Operations_Queue_Asset.listView-meta.xml
<ListView>
    <fullName>Utility_Operations_Queue_Asset</fullName>
    <filterScope>Queue</filterScope>
    <label>Utility Operations Queue</label>
    <queue>Utility_Operations_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>